<resources>
    <string name="app_name">Car_Loan_Cal</string>
    <string name="Car_Price">Car Price</string>
    <string name="down_payment">Down Payment</string>
    <string name="loan_period">Loan Period</string>
    <string name="interest_rate">Interest Rate</string>
    <string name="car_loan">Car Loan</string>
    <string name="interest">Interest</string>
    <string name="monthly_payment">Monthly Payment</string>
    <string name="view_car_loan" />
    <string name="btn_calculate">Calculate</string>
</resources>
